[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/UI/UI-Menu-Button-Active.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/UI-Menu-Popup-Background.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/UI-Menu-Button-Default.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Exo-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/GUI/Parallax.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/GUI/Menu.gd" type="Script" id=6]
[ext_resource path="res://Sprites/UI/UI-Menu-Button-Disabledt.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/UI-Menu-Button-Pressed.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/Skin_01.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/Default_Skin.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "Sky_Movement"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Parallax/Sky/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -320, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Mountains_Movement"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Parallax/Mountains/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -320, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Trees01_Movement"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Parallax/Trees_01/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 29 ), Vector2( -320, 29 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Trees02_Movement"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Parallax/Trees_02/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 26 ), Vector2( -320, 26 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "FadeScreen"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CentralIcon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -50.0
margin_right = 75.0
margin_bottom = 50.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="TextureButton" parent="CentralIcon"]
margin_left = 34.0891
margin_top = 19.8785
margin_right = 116.089
margin_bottom = 37.8785
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CentralIcon/NewGameButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.5
margin_bottom = -0.5
custom_fonts/font = SubResource( 1 )
text = "New Game"
align = 1
valign = 1

[node name="LoadGameButton" type="TextureButton" parent="CentralIcon"]
margin_left = 34.0891
margin_top = 43.0293
margin_right = 116.089
margin_bottom = 61.0293
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CentralIcon/LoadGameButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.10874
margin_bottom = -1.10874
custom_fonts/font = SubResource( 1 )
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGameButton" type="TextureButton" parent="CentralIcon"]
margin_left = 34.0891
margin_top = 66.2188
margin_right = 116.089
margin_bottom = 84.2188
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CentralIcon/ExitGameButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.615509
margin_bottom = -0.615509
custom_fonts/font = SubResource( 1 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkinSelectorContainer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SkinSelectorContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -69.5
margin_top = 20.0
margin_right = 69.5
margin_bottom = 23.0
custom_fonts/font = SubResource( 7 )
text = "Selecione uma skin"
align = 1
valign = 1

[node name="Default" type="TextureButton" parent="SkinSelectorContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = -27.0
margin_bottom = -22.0
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SkinSelectorContainer/Default"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = 11.0
margin_right = 12.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 8 )
text = "Padr√£o"
align = 1
valign = 1

[node name="SkinRed" type="TextureButton" parent="SkinSelectorContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -40.0
margin_right = 33.0
margin_bottom = -22.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="SkinSelectorContainer/SkinRed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.0
margin_top = 11.0
margin_right = 13.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 8 )
text = "Skin 01"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parallax" parent="." instance=ExtResource( 5 )]

[node name="AnimationSky" type="AnimationPlayer" parent="."]
autoplay = "Sky_Movement"
anims/Sky_Movement = SubResource( 2 )

[node name="AnimationMountains" type="AnimationPlayer" parent="."]
autoplay = "Mountains_Movement"
anims/Mountains_Movement = SubResource( 3 )

[node name="AnimationTrees01" type="AnimationPlayer" parent="."]
autoplay = "Trees01_Movement"
anims/Trees01_Movement = SubResource( 4 )

[node name="AnimationTrees02" type="AnimationPlayer" parent="."]
autoplay = "Trees02_Movement"
anims/Trees02_Movement = SubResource( 5 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/FadeScreen = SubResource( 6 )

[connection signal="pressed" from="CentralIcon/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CentralIcon/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
[connection signal="pressed" from="SkinSelectorContainer/Default" to="." method="_on_Default_skin_selected"]
[connection signal="pressed" from="SkinSelectorContainer/SkinRed" to="." method="_on_Red_skin_selected"]

[editable path="Parallax"]
